--- a/package.json
+++ b/package.json
@@ -3,18 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
+    "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^13.1.9",
-    "node-sass": "^5.0.0",
+    "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.16.3",
+    "node-sass": "^6.0.0",
     "react": "^17.0.2",
-    "react-dnd": "^14.0.2",
-    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^2.0.1",
-    "yarn": "^1.22.10"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
